--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -1,254 +1,256 @@
-.ant-divider.ant-divider-horizontal {
-  margin: 16px 0;
-}
 
-#common_settings_form_birthDate {
-  width: 100%;
-}
 
-.privacy_settings_form {
-  .ant-form-item-control {
-    height: 100%;
-  }
+// .ant-divider.ant-divider-horizontal {
+//   margin: 16px 0;
+// }
 
-  .ant-select-selection__rendered {
-    margin-right: 0;
-  }
-}
+// #common_settings_form_birthDate {
+//   width: 100%;
+// }
 
-.has-error {
-  .ant-checkbox-wrapper {
-    color: #f5222d;
-  }
-}
+// .privacy_settings_form {
+//   .ant-form-item-control {
+//     height: 100%;
+//   }
 
-.ant-menu-inline .ant-menu-item:not(:last-child),
-.ant-menu-inline .ant-menu-item {
-  margin: 0;
-}
+//   .ant-select-selection__rendered {
+//     margin-right: 0;
+//   }
+// }
 
-.ant-menu.ant-menu-dark .ant-menu-item-selected,
-.ant-menu-submenu-popup.ant-menu-dark .ant-menu-item-selected {
-  border-left: 2px solid #0acdde;
-  font-weight: bold;
-}
+// .has-error {
+//   .ant-checkbox-wrapper {
+//     color: #f5222d;
+//   }
+// }
 
-.ant-menu-dark .ant-menu-sub .ant-menu-item-selected {
-  background: #23414e;
-}
+// .ant-menu-inline .ant-menu-item:not(:last-child),
+// .ant-menu-inline .ant-menu-item {
+//   margin: 0;
+// }
 
-.ant-menu-dark .ant-menu-sub .ant-menu-item {
-  display: flex;
-  align-items: center;
-  height: 64px;
-}
+// .ant-menu.ant-menu-dark .ant-menu-item-selected,
+// .ant-menu-submenu-popup.ant-menu-dark .ant-menu-item-selected {
+//   border-left: 2px solid #0acdde;
+//   font-weight: bold;
+// }
 
-.ant-list-split {
-  .ant-list-item {
-    border: none;
-    padding: 0;
-  }
-}
+// .ant-menu-dark .ant-menu-sub .ant-menu-item-selected {
+//   background: #23414e;
+// }
 
-.ant-collapse-borderless>.ant-collapse-item {
-  border: none;
-}
+// .ant-menu-dark .ant-menu-sub .ant-menu-item {
+//   display: flex;
+//   align-items: center;
+//   height: 64px;
+// }
 
-.ant-drawer-title {
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 28px;
-  color: #0e2833;
-}
+// .ant-list-split {
+//   .ant-list-item {
+//     border: none;
+//     padding: 0;
+//   }
+// }
 
-.change-drawer .ant-drawer-title {
-  font-size: 20px;
-}
+// .ant-collapse-borderless>.ant-collapse-item {
+//   border: none;
+// }
 
-.change-drawer .ant-drawer-close {
-  position: relative;
-  top: 0 !important;
-}
+// .ant-drawer-title {
+//   font-weight: bold;
+//   font-size: 20px;
+//   line-height: 28px;
+//   color: #0e2833;
+// }
 
-.change-drawer .ant-drawer-wrapper-body {
-  display: grid;
-  grid: 88px auto / auto;
-}
+// .change-drawer .ant-drawer-title {
+//   font-size: 20px;
+// }
 
-.change-drawer .ant-drawer-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 0 0 24px;
-}
+// .change-drawer .ant-drawer-close {
+//   position: relative;
+//   top: 0 !important;
+// }
 
-.change-drawer .ant-drawer-body {
-  display: flex;
-  flex-flow: column;
-  padding: 0;
-  justify-content: space-between;
-}
+// .change-drawer .ant-drawer-wrapper-body {
+//   display: grid;
+//   grid: 88px auto / auto;
+// }
 
-#privacy_popup_search {
-  display: flex;
-  flex-flow: column;
-}
+// .change-drawer .ant-drawer-header {
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-between;
+//   padding: 0 0 0 24px;
+// }
 
-.ant-btn {
-  &:disabled {
-    cursor: default;
-  }
-}
+// .change-drawer .ant-drawer-body {
+//   display: flex;
+//   flex-flow: column;
+//   padding: 0;
+//   justify-content: space-between;
+// }
 
-.ant-input-search {
-  .ant-input {
-    padding-right: 11px;
-    padding-left: 30px;
-  }
+// #privacy_popup_search {
+//   display: flex;
+//   flex-flow: column;
+// }
 
-  .ant-input-suffix>i[aria-label="icon: search"] {
-    display: none;
-  }
-}
+// .ant-btn {
+//   &:disabled {
+//     cursor: default;
+//   }
+// }
 
-.ant-table-content {
-  color: #83888b;
-  font-size: 12px;
-  line-height: 20px;
-}
+// .ant-input-search {
+//   .ant-input {
+//     padding-right: 11px;
+//     padding-left: 30px;
+//   }
 
-.ant-table-thead {
-  text-transform: uppercase;
+//   .ant-input-suffix>i[aria-label="icon: search"] {
+//     display: none;
+//   }
+// }
 
-  th {
-    word-break: initial !important;
-  }
-}
+// .ant-table-content {
+//   color: #83888b;
+//   font-size: 12px;
+//   line-height: 20px;
+// }
 
-.ant-form-explain {
-  font-size: 12px;
-  line-height: 22px;
-  color: #b0b5ba;
-}
+// .ant-table-thead {
+//   text-transform: uppercase;
 
-.ant-pagination {
-  padding: 0 16px;
-}
+//   th {
+//     word-break: initial !important;
+//   }
+// }
 
-.ant-collapse,
-.ant-collapse>.ant-collapse-item,
-.ant-collapse-content {
-  border: 0;
-}
+// .ant-form-explain {
+//   font-size: 12px;
+//   line-height: 22px;
+//   color: #b0b5ba;
+// }
 
-.vacancy-form .ant-form-item-control {
-  line-height: 34px;
-}
+// .ant-pagination {
+//   padding: 0 16px;
+// }
 
-h1.ant-typography,
-.ant-typography h1 {
-  font-size: 36px;
-}
+// .ant-collapse,
+// .ant-collapse>.ant-collapse-item,
+// .ant-collapse-content {
+//   border: 0;
+// }
 
-.ant-table-thead>tr>th .ant-table-column-sorter .ant-table-column-sorter-inner-full {
-  margin-top: -0.55em;
-}
+// .vacancy-form .ant-form-item-control {
+//   line-height: 34px;
+// }
 
-.contacts-filter-menu .ant-menu-item,
-.contacts-filter-menu .ant-menu-item:not(:last-child) {
-  height: 32px;
-  line-height: 32px;
-  font-size: 14px;
-}
+// h1.ant-typography,
+// .ant-typography h1 {
+//   font-size: 36px;
+// }
 
-.contacts-search-collapse {
-  .ant-collapse-content-box {
-    background: white;
-    padding: 0;
-  }
+// .ant-table-thead>tr>th .ant-table-column-sorter .ant-table-column-sorter-inner-full {
+//   margin-top: -0.55em;
+// }
 
-  .ant-collapse-header {
-    color: #0e2833;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 22px;
-  }
-}
+// .contacts-filter-menu .ant-menu-item,
+// .contacts-filter-menu .ant-menu-item:not(:last-child) {
+//   height: 32px;
+//   line-height: 32px;
+//   font-size: 14px;
+// }
 
-.ant-radio-button-wrapper {
-  color: #606767;
+// .contacts-search-collapse {
+//   .ant-collapse-content-box {
+//     background: white;
+//     padding: 0;
+//   }
 
-  &:hover {
-    color: #ff8c10;
-  }
-}
+//   .ant-collapse-header {
+//     color: #0e2833;
+//     font-weight: bold;
+//     font-size: 16px;
+//     line-height: 22px;
+//   }
+// }
 
-.ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled) {
-  color: #ff8c10;
-  border-color: #ff8c10;
-  box-shadow: -1px 0 0 0 #ff8c10;
-}
+// .ant-radio-button-wrapper {
+//   color: #606767;
 
-.ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled)::before {
-  background-color: #ff8c10 !important;
-  opacity: 0.1;
-}
+//   &:hover {
+//     color: #ff8c10;
+//   }
+// }
 
-.ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):first-child {
-  border-color: #ff8c10;
-  box-shadow: none !important;
-}
+// .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled) {
+//   color: #ff8c10;
+//   border-color: #ff8c10;
+//   box-shadow: -1px 0 0 0 #ff8c10;
+// }
 
-.ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):hover {
-  color: #ff8c10;
-  border-color: #ff8c10;
-  box-shadow: -1px 0 0 0 #ff8c10;
-}
+// .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled)::before {
+//   background-color: #ff8c10 !important;
+//   opacity: 0.1;
+// }
 
-.ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):active {
-  color: #ff8c10;
-  border-color: #ff8c10;
-  box-shadow: -1px 0 0 0 #ff8c10;
-}
+// .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):first-child {
+//   border-color: #ff8c10;
+//   box-shadow: none !important;
+// }
 
-.ant-menu-inline-collapsed-tooltip {
-  display: none;
-}
+// .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):hover {
+//   color: #ff8c10;
+//   border-color: #ff8c10;
+//   box-shadow: -1px 0 0 0 #ff8c10;
+// }
 
-.ant-slider-handle {
+// .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):active {
+//   color: #ff8c10;
+//   border-color: #ff8c10;
+//   box-shadow: -1px 0 0 0 #ff8c10;
+// }
 
-  .ant-tooltip-inner,
-  .ant-tooltip-arrow:before {
-    background-color: #0acdde;
-  }
-}
+// .ant-menu-inline-collapsed-tooltip {
+//   display: none;
+// }
 
-.ant-slider-track {
-  background-color: #0acdde;
-}
+// .ant-slider-handle {
 
-.ant-drawer-header {
-  display: flex;
-  align-items: center;
+//   .ant-tooltip-inner,
+//   .ant-tooltip-arrow:before {
+//     background-color: #0acdde;
+//   }
+// }
 
-  .ant-drawer-close {
-    top: 17px;
-  }
-}
+// .ant-slider-track {
+//   background-color: #0acdde;
+// }
 
-.ant-form-vertical .ant-form-item {
-  padding-bottom: 0;
-  margin-bottom: 0;
-}
+// .ant-drawer-header {
+//   display: flex;
+//   align-items: center;
 
-.ant-layout.ant-layout-has-sider {
-  flex-direction: column;
-}
+//   .ant-drawer-close {
+//     top: 17px;
+//   }
+// }
 
-.ant-layout.ant-layout-has-sider>.ant-layout {
-  overflow-x: initial;
-}
+// .ant-form-vertical .ant-form-item {
+//   padding-bottom: 0;
+//   margin-bottom: 0;
+// }
 
-.ant-table-tbody>tr>td {
-  position: relative;
-}
+// .ant-layout.ant-layout-has-sider {
+//   flex-direction: column;
+// }
+
+// .ant-layout.ant-layout-has-sider>.ant-layout {
+//   overflow-x: initial;
+// }
+
+// .ant-table-tbody>tr>td {
+//   position: relative;
+// }
