--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -1,5 +1,3 @@
-
-
 // .ant-divider.ant-divider-horizontal {
 //   margin: 16px 0;
 // }
@@ -254,3 +252,11 @@
 // .ant-table-tbody>tr>td {
 //   position: relative;
 // }
+
+.ant-menu-item a {
+    color: #849197;
+
+    &:hover {
+        color: #ffffff
+    }
+}
