--- a/src/styles/ant-components.less
+++ b/src/styles/ant-components.less
@@ -32,5 +32,6 @@
 @import "~antd/es/slider/style/index";
 @import "~antd/es/tooltip/style/index";
 @import "~antd/es/input-number/style/index";
+@import "~antd/es/page-header/style/index";
 
 @import "style";
