--- a/src/styles/ant-vars.less
+++ b/src/styles/ant-vars.less
@@ -1,9 +1,11 @@
+@primary-color: #2bcaa9;
+
 @typography-title-font-weight: 300;
 @layout-sider-background: #0E2833;
 @menu-dark-bg: #0E2833;
 @menu-dark-submenu-bg: #23414E;
 @menu-dark-item-active-bg: #0E2833;
-;
+
 @menu-dark-selected-item-icon-color: #FFFFFF;
 @menu-dark-selected-item-text-color: #FFFFFF;
 @menu-inline-toplevel-item-height: 64px;
@@ -14,8 +16,8 @@
 @collapse-header-bg: #FFFFFF;
 @collapse-content-bg: #F4F7FA;
 
-@btn-default-color: #ff8c10;
-@btn-default-border: #ff8c10;
+@btn-default-color: rgba(0, 0, 0, .65);
+@btn-default-border: #d9d9d9;
 
 @tooltip-bg: #0ACDDE;
 @tooltip-arrow-color: #0ACDDE;
