Добавлен UserBar, работа над страницей Oferreds и Gifts

--- a/src/styles/ant-vars.less
+++ b/src/styles/ant-vars.less
@@ -1,23 +1,23 @@
 @primary-color: #2bcaa9;
 
 @typography-title-font-weight: 300;
-@layout-sider-background: #0E2833;
-@menu-dark-bg: #0E2833;
-@menu-dark-submenu-bg: #23414E;
-@menu-dark-item-active-bg: #0E2833;
+@layout-sider-background: #0e2833;
+@menu-dark-bg: #0e2833;
+@menu-dark-submenu-bg: #23414e;
+@menu-dark-item-active-bg: #0e2833;
 
-@menu-dark-selected-item-icon-color: #FFFFFF;
-@menu-dark-selected-item-text-color: #FFFFFF;
+@menu-dark-selected-item-icon-color: #ffffff;
+@menu-dark-selected-item-text-color: #ffffff;
 @menu-inline-toplevel-item-height: 64px;
 @layout-footer-padding: 0;
-@layout-header-background: #FFFFFF;
-@table-header-bg: #FFFFFF;
-@table-header-color: #83888B;
-@collapse-header-bg: #FFFFFF;
-@collapse-content-bg: #F4F7FA;
+@layout-header-background: #ffffff;
+@table-header-bg: #ffffff;
+@table-header-color: #83888b;
+@collapse-header-bg: #ffffff;
+@collapse-content-bg: #f4f7fa;
 
-@btn-default-color: rgba(0, 0, 0, .65);
+@btn-default-color: rgba(0, 0, 0, 0.65);
 @btn-default-border: #d9d9d9;
 
-@tooltip-bg: #0ACDDE;
-@tooltip-arrow-color: #0ACDDE;
+// @tooltip-bg: #0acdde;
+// @tooltip-arrow-color: #0acdde;
