--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -1,22 +1,28 @@
-:root {
-    --green: #2bcaa9;
-    --hover-green: #2bc0ca;
-    --orange: #ff6833;
-    --hover-orange: #ec7f59;
-    --grey: #363b40;
-    --hoverGray: #5f6567;
-    --lightGray: #3e4349;
+// :root {
+//     --green: #2bcaa9;
+//     --hover-green: #2bc0ca;
+//     --orange: #ff6833;
+//     --hover-orange: #ec7f59;
+//     --grey: #363b40;
+//     --hoverGray: #5f6567;
+//     --lightGray: #3e4349;
+// }
+
+.ant-page-header {
+  @media screen and(max-width: 767px) {
+    padding: 5px;
+  }
 }
 
 .ant-menu-dark.ant-menu-dark:not(.ant-menu-horizontal) .ant-menu-item-selected {
-    color: white;
-    background-color: #1c3540;
+  color: white;
+  background-color: #1c3540;
 }
 
 .ant-menu-item a {
-    color: #849197;
+  color: #849197;
 
-    &:hover {
-        color: #ffffff
-    }
+  &:hover {
+    color: #ffffff;
+  }
 }
